# roboticbicycle

./: CMakeLists.txt  README.rst  project.config
MCP/: CMakeLists.txt  README.rst  STM32F10X_CL_flash.ld  arm_macros.cmake  clocks.py  toolchain.cmake
MCP/FreeRTOS/inc/: FreeRTOSConfig.h
MCP/FreeRTOS/src/: CMakeLists.txt
MCP/Platform/: arm_cm3.cmake
MCP/inc/: MCPtasks.h  bma180_reg.h  low_level_init.h  peripheral_init.h  sample.h  sinwave.h  utils.h
MCP/scripts/: openocd.cfg  stm3210x_cl.ld
MCP/src/: CMakeLists.txt  HMC5843_REG.h  ITG3200.h  ITG3200_REG.h  MCPtasks.cc  STM32F10X_CL.ld  STM32F10X_MD.ld  adxl345_reg.h  blinky.cpp  enc_test.cc  enc_test.cpp  floatingpoint_test.cpp  hmc5843.h  hmc5843_reg.h  hmc5883l_reg.h  itg3200_reg.h  low_level_init.cc  main.c  main.cc  main.cpp  myclasses.cpp  myclasses.h  peripheral_init.cc  pwm_test.cc  pwm_test.cpp  sample.cc  sample.h  spi_test.cc  startup_STM32F10X_CL.c  startup_STM32F10X_CL.s  steer_calibration.cc  stickimu_test.cc  stickimu_test.cpp  test_sample.cc  test_startup.cpp
MCP/src/test/: CMakeLists.txt  myclasses.cc  myclasses.h  syscalls.c  test_FreeRTOS.cc  test_encoder.cc  test_gpio_interrupt.cc  test_myclasses.cc  test_nothing.cc  test_sample.cc  test_sections.cc  test_sizeof.cc
MCP/stm32/src/: CMakeLists.txt
SCP/: CMakeLists.txt
SCP/inc/: mainwindow.h  plotwidget.h  xbeedialog.h
SCP/src/: CMakeLists.txt  main.cc  mainwindow.cc  plotwidget.cc  xbeedialog.cc
SCP/src/test/: CMakeLists.txt  test_libserial.cc  test_receiveserial.cc  test_termios.cc
